tests/negative/gold/multiple_loop_variables_test.gold
tests/negative/multiple_loop_variables_test.toit:6:15: error: Definition of variable not allowed at this location
  for (foo (x := 499) (y := 42)); x < 500 and y < 44; foo x++ y++:
              ^~
tests/negative/multiple_loop_variables_test.toit:6:26: error: Definition of variable not allowed at this location
  for (foo (x := 499) (y := 42)); x < 500 and y < 44; foo x++ y++:
                         ^~
tests/negative/multiple_loop_variables_test.toit:6:35: error: Unresolved identifier: 'x'
  for (foo (x := 499) (y := 42)); x < 500 and y < 44; foo x++ y++:
                                  ^
tests/negative/multiple_loop_variables_test.toit:6:47: error: Unresolved identifier: 'y'
  for (foo (x := 499) (y := 42)); x < 500 and y < 44; foo x++ y++:
                                              ^
tests/negative/multiple_loop_variables_test.toit:6:59: error: Can't assign to unknown 'x'
  for (foo (x := 499) (y := 42)); x < 500 and y < 44; foo x++ y++:
                                                          ^
tests/negative/multiple_loop_variables_test.toit:6:63: error: Can't assign to unknown 'y'
  for (foo (x := 499) (y := 42)); x < 500 and y < 44; foo x++ y++:
                                                              ^
tests/negative/multiple_loop_variables_test.toit:7:9: error: Unresolved identifier: 'x'
    foo x y
        ^
tests/negative/multiple_loop_variables_test.toit:7:11: error: Unresolved identifier: 'y'
    foo x y
          ^
tests/negative/multiple_loop_variables_test.toit:9:17: error: Definition of variable not allowed at this location
  while (foo (x := 499) (y := 42)):
                ^~
tests/negative/multiple_loop_variables_test.toit:9:28: error: Definition of variable not allowed at this location
  while (foo (x := 499) (y := 42)):
                           ^~
tests/negative/multiple_loop_variables_test.toit:10:5: error: Can't assign to unknown 'x'
    x++
    ^
tests/negative/multiple_loop_variables_test.toit:11:5: error: Can't assign to unknown 'y'
    y++
    ^
tests/negative/multiple_loop_variables_test.toit:9:10: error: Condition can't be 'none'
  while (foo (x := 499) (y := 42)):
         ^~~
Compilation failed.
